# chops

./: .gitignore  CMakeLists.txt  build.sh  clean_build.sh  list_directory.sh  project_structure.txt  pull.sh  push.sh
Docs/: example_filenames_to_process.txt
Plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UIBridge.cpp  UIBridge.h
Source/Core/: ChordParser.cpp  ChordParser.h  ChordTypes.h  MetadataService.cpp  MetadataService.h  MetadataServiceTest.cpp  MetadataServiceTest.h
Source/Database/: ChopsDatabase.cpp  ChopsDatabase.h  DatabaseSyncManager.cpp  DatabaseSyncManager.h  schema.sql
Source/Shared/: SharedConfig.h
Source/Utils/: FilenameUtils.cpp  FilenameUtils.h
StandaloneApp/: CMakeLists.txt  main.cpp
UI/: .eslintignore.md  ChopsBrowserUI.jsx  index.html  index.js  package-lock.json  package.json  webpack.config.js
UI/components/: ChordFinderPanel.jsx  PianoRoll.jsx  ResultsList.jsx  SearchBar.jsx
UI/styles/: ChopsBrowserUI.css  SearchBar.css
UI/utils/: ChordTaxonomy.js
